--- a/style.css
+++ b/style.css
@@ -1,48 +1,3 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-
 #logo {
     display: block;
     margin: auto;
@@ -53,9 +8,12 @@ table {
 	right: 20px; top: 15px;
 }
 
+
 .main #search_box {
 	display: block;
-	margin: auto;
+	margin: 20px auto;
+	width: 500px;
+	height: 40px;
 }
 
 .buttons {
@@ -63,9 +21,68 @@ table {
 	text-align: center;
 }
 
+.buttons input {
+	margin: 10px 20px;
+	height: 35px;
+	border: none;
+	background-color: rgb(242, 242, 242);
+	color: rgb(34, 34, 34);
+}
+
 .fbar {
 	position: absolute;
 	bottom: 5px;
-	background-color: rgb(228, 228, 228);
+	background-color: rgb(242, 242, 242);
 	margin: auto;
+	width: 100%;
+}
+
+li {
+	float: left;
+	display: block;
+	padding: 10px;
+}
+
+li a {
+	height: 50px;
+}
+
+
+.main {
+	margin: 100px;
+}
+
+.right {
+	float: right;
+}
+
+.right a, .left a {
+	margin: 10px;
+}
+
+.above_footer p {
+	margin: auto 10px;
+	color: rgb(102, 102, 102);
+}
+
+.left {
+	position: absolute;
+	float: bottom;
+}
+
+.footer, .above_footer {
+	border-top-color: rgb(228, 228, 228);
+	border-top-style: solid;
+	border-top-width: 1px;
+	height: 40px;
+}
+
+.fbar a, .top a {
+	text-decoration: none;
+	color: rgb(102, 102, 102);
+}
+
+* {
+	font-family: "arial", sans-serif;
+	font-size: 14px;
 }
